[gd_scene load_steps=5 format=2]

[ext_resource path="res://Enemy.gd" type="Script" id=1]
[ext_resource path="res://Assets/enemy.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 13.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3, 10 )

[node name="Enemy" type="KinematicBody2D" groups=["enemy"]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Killzone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
position = Vector2( 13, 0 )
shape = SubResource( 2 )

[connection signal="deactivate" from="." to="." method="_on_Enemy_deactivate"]
[connection signal="hit" from="." to="." method="_on_Enemy_hit"]
[connection signal="body_entered" from="Killzone" to="." method="_on_Killzone_body_entered"]
